--- a/website/vpn/sts/templates/sts/console.html
+++ b/website/vpn/sts/templates/sts/console.html
@@ -3,17 +3,17 @@
 
 {% block trail %}
         <li><a href="/">Home</a></li>
-        <li><a href="{{ url_for('vpn.index') }}">VPN</a></li>
-        <li class="current"><a href="{{ url_for('vpn.console') }}">VPN Console</a></li>
+        <li><a href="{{ url_for('sts.index') }}">VPN</a></li>
+        <li class="current"><a href="{{ url_for('sts.console') }}">VPN Console</a></li>
 {% endblock trail %}
 
 {% block content %}
     <!-- start of side-nav -->
     <div id="side-nav" class="large-2 columns">
       <ul class="side-nav">
-        <li><a href="{{ url_for('vpn.sts_index') }}"><i class="fi-list"> </i>隧道列表</a></li>
-        <li><a href="{{ url_for('vpn.sts_add') }}"><i class="fi-plus"> </i>新增隧道</a></li>
-        <li class="active"><a href="{{ url_for('vpn.console') }}"><i class="fi-wrench"> </i>VPN 服务管理</a></li>
+        <li><a href="{{ url_for('sts.index') }}"><i class="fi-list"> </i>隧道列表</a></li>
+        <li><a href="{{ url_for('sts.add') }}"><i class="fi-plus"> </i>新增隧道</a></li>
+        <li class="active"><a href="{{ url_for('sts.console') }}"><i class="fi-wrench"> </i>VPN 服务管理</a></li>
       </ul>
     </div>
     <!-- end of side-nav -->
@@ -30,7 +30,7 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
-      <form method="POST" action="{{ url_for('vpn.console') }}">
+      <form method="POST" action="{{ url_for('sts.console') }}">
         <div class="row">
           <div class="large-3 columns">
             <ul class="pricing-table">
