--- a/website/vpn/sts/templates/sts/index.html
+++ b/website/vpn/sts/templates/sts/index.html
@@ -1,20 +1,19 @@
 {% extends "layout.html" %}
-{% block title %}VPN Dial{% endblock title%}
+{% block title %}VPN Site-to-Site{% endblock title%}
 
 {% block trail %}
         <li><a href="/">Home</a></li>
-        <li><a href="{{ url_for('vpn.index') }}">VPN</a></li>
-        <li class="current"><a href="{{ url_for('vpn.dial_index') }}">Dial</a></li>
+        <li><a href="{{ url_for('sts.index') }}">VPN</a></li>
+        <li class="current"><a href="{{ url_for('sts.index') }}">Site-to-Site</a></li>
 {% endblock trail %}
 
 {% block content %}
     <!-- start of side-nav -->
     <div id="side-nav" class="large-2 columns">
       <ul class="side-nav">
-        <li class="active"><a href="{{ url_for('vpn.dial_index') }}"><i class="fi-list"> </i>账号列表</a></li>
-        <li><a href="{{ url_for('vpn.dial_add') }}"><i class="fi-plus"> </i>新增账号</a></li>
-        <li><a href="{{ url_for('vpn.dial_settings') }}"><i class="fi-plus"> </i>设置地址池</a></li>
-        <li><a href="{{ url_for('vpn.console') }}"><i class="fi-wrench"> </i>VPN 服务管理</a></li>
+        <li class="active"><a href="{{ url_for('sts.index') }}"><i class="fi-list"> </i>隧道列表</a></li>
+        <li><a href="{{ url_for('sts.add') }}"><i class="fi-plus"> </i>新增隧道</a></li>
+        <li><a href="{{ url_for('sts.console') }}"><i class="fi-wrench"> </i>VPN 服务管理</a></li>
       </ul>
     </div>
     <!-- end of side-nav -->
@@ -34,10 +33,12 @@
       <table>
         <thead>
           <tr>
-            <th>账号名</th>
-            <th>认证类型</th>
-            <th>虚拟IP</th>
-            <th>真实IP</th>
+            <th>隧道名</th>
+            <th>启动类型</th>
+            <th>本端IP</th>
+            <th>本端子网</th>
+            <th>对端IP</th>
+            <th>对端子网</th>
             <th>状态</th>
             <th>查看</th>
             <th>操作</th>
@@ -47,10 +48,12 @@
           {% if tunnels %}
           {% for tunnel in tunnels %}
           <tr>
-            <td><a href="{{ url_for('vpn.dial_id_settings', id=tunnel.id) }}">{{ tunnel.name }}</a></td>
-            <td>psk + xauth</td>
-            <td></td>
-            <td></td>
+            <td><a href="{{ url_for('sts.settings', id=tunnel.id) }}">{{ tunnel.name }}</a></td>
+            <td>{{ tunnel.rules.auto }}</td>
+            <td>{{ tunnel.rules.left }}</td>
+            <td>{{ tunnel.rules.leftsubnet }}</td>
+            <td>{{ tunnel.rules.right }}</td>
+            <td>{{ tunnel.rules.rightsubnet }}</td>
             <td>
               {% if tunnel.status %}
                 <span class="success label">Online</span>
@@ -59,10 +62,10 @@
               {% endif %}
             </td>
             <td>
-              <a href="{{ url_for('vpn.dial_flow', id=tunnel.id) }}" class="bitty button">流量</a>
+              <a href="{{ url_for('sts.flow', id=tunnel.id) }}" class="bitty button">流量</a>
             </td>
             <td>
-              <form method="POST" action="{{ url_for('vpn.updown') }}">
+              <form method="POST" action="{{ url_for('sts.updown') }}">
                 {{ form.tunnel_name(value=tunnel.name, type="hidden") }}
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                 {% if tunnel.status %}
