--- a/website/vpn/sts/templates/sts/view.html
+++ b/website/vpn/sts/templates/sts/view.html
@@ -1,19 +1,20 @@
 {% extends "layout.html" %}
-{% block title %}VPN Site-to-Site 新增隧道{% endblock title%}
+{% block title %} VPN Site-to-Site 修改隧道{% endblock %}
 
 {% block trail %}
         <li><a href="/">Home</a></li>
-        <li><a href="{{ url_for('vpn.index') }}">VPN</a></li>
-        <li class="current"><a href="{{ url_for('vpn.sts_index') }}">Site-to-Site</a></li>
+        <li><a href="{{ url_for('sts.index') }}">VPN</a></li>
+        <li class="current"><a href="{{ url_for('sts.index') }}">Site-to-Site</a></li>
 {% endblock trail %}
 
 {% block content %}
     <!-- start of side-nav -->
     <div id="side-nav" class="large-2 columns">
       <ul class="side-nav">
-        <li><a href="{{ url_for('vpn.sts_index') }}"><i class="fi-list"> </i>隧道列表</a></li>
-        <li class="active"><a href="{{ url_for('vpn.sts_add') }}"><i class="fi-plus"> </i>新增隧道</a></li>
-        <li><a href="{{ url_for('vpn.console') }}"><i class="fi-wrench"> </i>VPN 服务管理</a></li>
+        <li><a href="{{ url_for('sts.index') }}"><i class="fi-list"> </i>隧道列表</a></li>
+        <li><a href="{{ url_for('sts.add') }}"><i class="fi-plus"> </i>新增隧道</a></li>
+        <li><a href="{{ url_for('sts.console') }}"><i class="fi-wrench"> </i>VPN 服务管理</a></li>
+        <li class="active"><a href="{{ url_for('sts.settings', id=tunnel.id) }}"><i class="fi-pencil"> </i>修改</a></li>
       </ul>
     </div>
     <!-- end of side-nav -->
@@ -30,7 +31,7 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
-      <form method="POST" action="{{ url_for('vpn.sts_add') }}">
+      <form method="POST" action="{{ url_for('sts.settings', id=tunnel.id) }}">
         <div class="row">
           <div class="large-3 columns">
             {{ form.tunnel_name.label(class="right inline") }}
@@ -40,7 +41,7 @@
             {{ form.tunnel_name(class="error", value=form.tunnel_name.value) }}
             <small class="error">{{ form.tunnel_name.errors[0] }}</small>
             {% else %}
-            {{ form.tunnel_name(placeholder="home") }}
+            {{ form.tunnel_name(value=tunnel.name) }}
             {% endif %}
           </div>
         </div>
@@ -69,7 +70,7 @@
             {{ form.local_ip(class="error", value=form.local_ip.value) }}
             <small class="error">{{ form.local_ip.errors[0] }}</small>
             {% else %}
-            {{ form.local_ip(placeholder="192.168.0.1") }}
+            {{ form.local_ip(value=tunnel.rules.left) }}
             {% endif %}
           </div>
         </div>
@@ -82,7 +83,7 @@
             {{ form.local_subnet(class="error", value=form.local_subnet.value) }}
             <small class="error">{{ form.local_subnet.errors[0] }}</small>
             {% else %}
-            {{ form.local_subnet(placeholder="10.1.0.0/16") }}
+            {{ form.local_subnet(value=tunnel.rules.leftsubnet) }}
             {% endif %}
           </div>
         </div>
@@ -95,7 +96,7 @@
             {{ form.remote_ip(class="error", value=form.remote_ip.value) }}
             <small class="error">{{ form.remote_ip.errors[0] }}</small>
             {% else %}
-            {{ form.remote_ip(placeholder="192.168.0.2") }}
+            {{ form.remote_ip(value=tunnel.rules.right) }}
             {% endif %}
           </div>
         </div>
@@ -108,7 +109,7 @@
             {{ form.remote_subnet(class="error", value=form.remote_subnet.value) }}
             <small class="error">{{ form.remote_subnet.errors[0] }}</small>
             {% else %}
-            {{ form.remote_subnet(placeholder="10.2.0.0/16") }}
+            {{ form.remote_subnet }}
             {% endif %}
           </div>
         </div>
@@ -121,19 +122,21 @@
             {{ form.psk(class="error", value=form.psk.value) }}
             <small class="error">{{ form.psk.errors[0] }}</small>
             {% else %}
-            {{ form.psk(placeholder="*DZ4J}[/*I7btVP6&lzXFyBlSV%D3@^]") }}
+            {{ form.psk(value=tunnel.psk) }}
             {% endif %}
           </div>
         </div>
 
         <div class="row">
           <div class="large-3 columns large-offset-3">
-            <button class="tiny success">保存</button>
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+            {{ form.save(class="success tiny button") }}
           </div>
+          <div class="large-2 columns end">
+            {{ form.delete(class="alert tiny button") }}
+          </div>
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
         </div>
       </form>
     </div>
     <!-- end of sts vpn table -->
 {% endblock content %}
-
