--- a/website/vpn/dial/templates/dial/view.html
+++ b/website/vpn/dial/templates/dial/view.html
@@ -8,17 +8,7 @@
 {% endblock trail %}
 
 {% block content %}
-    <!-- start of side-nav -->
-    <div id="side-nav" class="large-2 columns">
-      <ul class="side-nav">
-        <li><a href="{{ url_for('dial.index') }}"><i class="fi-list"> </i>账号列表</a></li>
-        <li><a href="{{ url_for('dial.add') }}"><i class="fi-plus"> </i>新增账号</a></li>
-        <li><a href="{{ url_for('dial.settings') }}"><i class="fi-plus"> </i>设置地址池</a></li>
-        <li><a href="{{ url_for('dial.console') }}"><i class="fi-wrench"> </i>VPN 服务管理</a></li>
-        <li class="active"><a href="{{ url_for('dial.id_settings', id=account.id) }}"><i class="fi-pencil"> </i>修改</a></li>
-      </ul>
-    </div>
-    <!-- end of side-nav -->
+    {% include "dial/sidenav.html" %}
 
     <!-- start of vpn table -->
     <div class="large-10 columns">
@@ -55,7 +45,7 @@
             {{ form.password(class="error", value=form.password.value) }}
             <small class="error">{{ form.password.errors[0] }}</small>
             {% else %}
-            {{ form.password(value='*********') }}
+            {{ form.password(value=account.password) }}
             {% endif %}
           </div>
         </div>
