--- a/website/vpn/sts/templates/sts/console.html
+++ b/website/vpn/sts/templates/sts/console.html
@@ -22,6 +22,13 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
+      <div data-alert class="alert-box {% if status %} success {% else %} alert {% endif %}">
+        {% if status %}
+        IPSec VPN 服务运行正常！
+        {% else %}
+        IPSec VPN 没有运行！
+        {% endif %}
+      </div>
       <form method="POST" action="{{ url_for('sts.console') }}">
         <div class="row">
           <div class="large-3 columns">
