Update openvpn server template and config files download link.

--- a/website/vpn/dial/templates/dial/download.html
+++ b/website/vpn/dial/templates/dial/download.html
@@ -34,32 +34,32 @@
           <tr>
             <td>Installer (32-bit), Windows XP and later</td>
             <td><a href="{{ url_for('dial.static', filename='openvpn-install-2.3.4-I003-i686.exe') }}">openvpn-install-2.3.4-I003-i686.exe</a></td>
-            <td><a href="{{ url_for('dial.static', filename='client.tar.gz') }}">client.tar.gz</a></td>
+            <td><a href="{{ url_for('dial.static', filename='windows-openvpn-client.zip') }}">windows-openvpn-client.zip</a></td>
           </tr>
           <tr>
             <td>Installer (64-bit), Windows XP and later</td>
             <td><a href="{{ url_for('dial.static', filename='openvpn-install-2.3.4-I003-x86_64.exe') }}">openvpn-install-2.3.4-I003-x86_64.exe</a></td>
-            <td><a href="{{ url_for('dial.static', filename='client.tar.gz') }}">client.tar.gz</a></td>
+            <td><a href="{{ url_for('dial.static', filename='windows-openvpn-client.zip') }}">windows-openvpn-client.zip</a></td>
           </tr>
           <tr>
             <td>Installer (32-bit), Windows Vista and later</td>
             <td><a href="{{ url_for('dial.static', filename='openvpn-install-2.3.4-I603-i686.exe') }}">openvpn-install-2.3.4-I603-i686.exe</a></td>
-            <td><a href="{{ url_for('dial.static', filename='client.tar.gz') }}">client.tar.gz</a></td>
+            <td><a href="{{ url_for('dial.static', filename='windows-openvpn-client.zip') }}">windows-openvpn-client.zip</a></td>
           </tr>
           <tr>
             <td>Installer (64-bit), Windows Vista and later</td>
             <td><a href="{{ url_for('dial.static', filename='openvpn-install-2.3.4-I603-x86_64.exe') }}">openvpn-install-2.3.4-I603-x86_64.exe</a></td>
-            <td><a href="{{ url_for('dial.static', filename='client.tar.gz') }}">client.tar.gz</a></td>
+            <td><a href="{{ url_for('dial.static', filename='windows-openvpn-client.zip') }}">windows-openvpn-client.zip</a></td>
           </tr>
           <tr>
             <td>Centos</td>
             <td>sudo yum install openvpn</a></td>
-            <td><a href="{{ url_for('dial.static', filename='client.tar.gz') }}">client.tar.gz</a></td>
+            <td><a href="{{ url_for('dial.static', filename='linux-openvpn-client.tar.gz') }}">linux-openvpn-client.tar.gz</a></td>
           </tr>
           <tr>
             <td>Debian/Ubuntu</td>
             <td>sudo apt-get install openvpn</a></td>
-            <td><a href="{{ url_for('dial.static', filename='client.tar.gz') }}">client.tar.gz</a></td>
+            <td><a href="{{ url_for('dial.static', filename='linux-openvpn-client.tar.gz') }}">linux-openvpn-client.tar.gz</a></td>
           </tr>
         </tbody>
       </table>
