--- a/website/vpn/dial/templates/dial/settings.html
+++ b/website/vpn/dial/templates/dial/settings.html
@@ -35,7 +35,7 @@
             {{ form.ipool(class="error", value=form.ipool.value) }}
             <small class="error">{{ form.ipool.errors[0] }}</small>
             {% else %}
-            {{ form.ipool(value=account.ipool) }}
+            {{ form.ipool(value=settings.ipool) }}
             {% endif %}
           </div>
         </div>
@@ -49,7 +49,7 @@
             {{ form.subnet(class="error", value=form.subnet.value) }}
             <small class="error">{{ form.subnet.errors[0] }}</small>
             {% else %}
-            {{ form.subnet(value=account.subnet) }}
+            {{ form.subnet(value=settings.subnet) }}
             {% endif %}
           </div>
         </div>
