--- a/website/vpn/sts/templates/sts/index.html
+++ b/website/vpn/sts/templates/sts/index.html
@@ -25,11 +25,11 @@
       <table>
         <thead>
           <tr>
-            <th>隧道名</th>
+            <th>隧道ID</th>
             <th>启动类型</th>
-            <th>本端私网</th>
+            <th>本端子网</th>
             <th>对端EIP</th>
-            <th>对端私网</th>
+            <th>对端子网</th>
             <th>状态</th>
             <th>查看</th>
             <th>操作</th>
