--- a/website/vpn/sts/templates/sts/view.html
+++ b/website/vpn/sts/templates/sts/view.html
@@ -50,10 +50,10 @@
           </div>
           <div class="large-5 columns end">
             {% if form.local_subnet.errors %}
-            {{ form.local_subnet(class="error", value=form.local_subnet.value) }}
+            {{ form.local_subnet(class="error") }}
             <small class="error">{{ form.local_subnet.errors[0] }}</small>
             {% else %}
-            {{ form.local_subnet(value=tunnel.rules.leftsubnet) }}
+            {{ form.local_subnet }}
             {% endif %}
           </div>
         </div>
@@ -76,7 +76,7 @@
           </div>
           <div class="large-5 columns end">
             {% if form.remote_subnet.errors %}
-            {{ form.remote_subnet(class="error", value=form.remote_subnet.value) }}
+            {{ form.remote_subnet(class="error") }}
             <small class="error">{{ form.remote_subnet.errors[0] }}</small>
             {% else %}
             {{ form.remote_subnet }}
