--- a/website/vpn/dial/templates/dial/index.html
+++ b/website/vpn/dial/templates/dial/index.html
@@ -22,6 +22,9 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
+      <div data-alert class="alert-box info">
+        注意：「状态」由于VPN 的keepalive 机制，会有1分钟左右的延时。
+      </div>
       <table>
         <thead>
           <tr>
