--- a/website/vpn/dial/templates/dial/view.html
+++ b/website/vpn/dial/templates/dial/view.html
@@ -22,6 +22,9 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
+      <div data-alert class="alert-box info">
+        注意：删除账号会重载VPN 服务，以确保被删除的账号断开连接。
+      </div>
       <form method="POST" action="{{ url_for('dial.id_settings', id=account.id) }}">
         <div class="row">
           <div class="large-3 columns">
