Update dial help message.

--- a/website/vpn/dial/templates/dial/download.html
+++ b/website/vpn/dial/templates/dial/download.html
@@ -22,6 +22,9 @@
       {% endfor %}
       {% endif %}
       {% endwith %}
+      <div data-alert class="alert-box info">
+        注意：「配置」文件下载后，请将配置文件中的「remote IP」字段修改为本机绑定的EIP 地址。
+      </div>
       <table>
         <thead>
           <tr>
