--- a/website/vpn/dial/templates/dial/settings.html
+++ b/website/vpn/dial/templates/dial/settings.html
@@ -23,7 +23,7 @@
       {% endif %}
       {% endwith %}
       <div data-alert class="alert-box info">
-        虚拟IP 地址池: 为VPN Server 分配给客户端的虚拟IP 地址池。子网网段：可以填写多个子网，用英文「,」分割。
+        虚拟IP 地址池: 为VPN Server 分配给客户端的虚拟IP 地址池。子网网段：为客户端连接之后可以访问的子网网段。可以填写多个子网，用英文「,」分割。
       </div>
       <form method="POST" action="{{ url_for('dial.settings') }}">
         <div class="row">
