--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -203,3 +203,11 @@ td a {
 #login form {
   padding: 1rem;
 }
+
+
+/* -----------------------------------------
+   For docs
+----------------------------------------- */
+.panel img {
+  margin-bottom: 10px;
+}
