--- a/website/docs/templates/docs/certificate.html
+++ b/website/docs/templates/docs/certificate.html
@@ -17,7 +17,7 @@
           <div class="panel">
             <h3>关于VPN 证书</h3>
             <hr />
-            <p>IPSec Site-to-Site VPN 采用的时PSK 方式加密连接，并使用证书认证。</p>
+            <p>IPSec Site-to-Site VPN 采用的时PSK 方式加密连接，并不使用证书认证。</p>
             <p>拨号VPN 使用了证书。考虑到证书的唯一性、安全性，我们的证书文件是VM 第一次启动时，通过脚本自动生成的，与OpenVPN 配置文件server.conf 一起放在/etc/openvpn 下。</p>
             <h5>其中：</h5>
             <ol>
