Rename project from ecsvpn(ecs-vpn) to flexgw(flex gateway).

--- a/website/docs/templates/docs/guide.html
+++ b/website/docs/templates/docs/guide.html
@@ -42,11 +42,11 @@
             <hr />
             <h5>ECS VPN（即本程序）</h5>
             <ul>
-              <li>目录：/usr/local/ecs-vpn</li>
-              <li>数据库文件：/usr/local/ecs-vpn/instance/website.db</li>
-              <li>日志文件：/usr/local/ecs-vpn/logs/website.log</li>
-              <li>启动脚本：/etc/init.d/ecsvpn 或/usr/local/ecs-vpn/website_console</li>
-              <li>实用脚本：/usr/local/ecs-vpn/scripts</li>
+              <li>目录：/usr/local/flexgw</li>
+              <li>数据库文件：/usr/local/flexgw/instance/website.db</li>
+              <li>日志文件：/usr/local/flexgw/logs/website.log</li>
+              <li>启动脚本：/etc/init.d/flexgw 或/usr/local/flexgw/website_console</li>
+              <li>实用脚本：/usr/local/flexgw/scripts</li>
             </ul>
             <p>「数据库文件」保存了我们所有的VPN 配置，建议定期备份。如果数据库损坏，可通过「实用脚本」目录下的initdb.py 脚本对数据库进行初始化，初始化之后所有的配置将清空。</p>
             <h5>Strongswan</h5>
@@ -55,8 +55,8 @@
               <li>日志文件：/var/log/strongswan.charon.log</li>
               <li>启动脚本：/usr/sbin/strongswan </li>
             </ul>
-            <p>如果strongswan.conf 配置文件损坏，可使用备份文件/usr/local/ecs-vpn/rc/strongswan.conf 进行覆盖恢复。</p>
-            <p>ipsec.conf 和ipsec.secrets 配置文件，由/usr/local/ecs-vpn/website/vpn/sts/templates/sts 目录下的同名文件自动生成，请勿随便修改。</p>
+            <p>如果strongswan.conf 配置文件损坏，可使用备份文件/usr/local/flexgw/rc/strongswan.conf 进行覆盖恢复。</p>
+            <p>ipsec.conf 和ipsec.secrets 配置文件，由/usr/local/flexgw/website/vpn/sts/templates/sts 目录下的同名文件自动生成，请勿随便修改。</p>
             <h5>OpenVPN</h5>
             <ul>
               <li>目录：/etc/openvpn</li>
@@ -64,7 +64,7 @@
               <li>状态文件：/etc/openvpn/openvpn-status.log</li>
               <li>启动脚本：/etc/init.d/openvpn </li>
             </ul>
-            <p>server.conf 配置文件，由/usr/local/ecs-vpn/website/vpn/dial/templates/dial 目录下的同名文件自动生成，请勿随便修改。</p>
+            <p>server.conf 配置文件，由/usr/local/flexgw/website/vpn/dial/templates/dial 目录下的同名文件自动生成，请勿随便修改。</p>
           </div>
         </div>
       </div>
