Add check update feature.
- add check update api.
- add check update button in navigation.
- add loading gif.
- add check update js.
- update exec_command timer default value.

--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -49,6 +49,7 @@
           </ul>
           <ul class="right">
             <li{% if 'docs.' in request.endpoint %} class="active" {% endif %}><a href="/docs"><i class="fi-page-doc"> </i>文档</a></li>
+            <li><a href="#" id="checkupdate">检查更新</a></li>
             <li><a href="/logout"><i class="fi-torso-business"> </i>{{ g.account }} 退出</a></li>
           </ul>
         </section>
