Update check update display.
- add .alert-box.loader css.
- add check update js to layout.html

--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -176,6 +176,12 @@ td a {
   color: #FFF;
 }
 
+.alert-box.loader {
+  background-color: transparent;
+  border-color: transparent;
+  text-align: center;
+}
+
 
 /* -----------------------------------------
    For login
