--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -102,6 +102,7 @@
 
   <script src="{{ url_for('static', filename='js/vendor/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='js/foundation.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/checkupdate.js') }}"></script>
   <script>
     $(document).foundation();
   </script>
