Add new version display while check update.
- add link to update doc.

--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -182,6 +182,11 @@ td a {
   text-align: center;
 }
 
+a.box-link {
+  color: #FFF;
+  text-decoration: underline;
+}
+
 
 /* -----------------------------------------
    For login
