Add update doc.

--- a/website/docs/templates/docs/sidenav.html
+++ b/website/docs/templates/docs/sidenav.html
@@ -7,6 +7,7 @@
         ('docs.snat', 'list', 'SNAT使用'),
         ('docs.certificate', 'list', '关于VPN 证书'),
         ('docs.debug', 'list', '问题排查'),
+        ('docs.update', 'list', '升级指南'),
         ('docs.changelog', 'list', 'ChangeLog')
       ] -%}
       <ul class="side-nav">
