Update Website Name to 'Flex GateWay'.

--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -22,7 +22,7 @@
   <header class="contain-to-grid">
     <div class="row">
       <div class="large-5 columns">
-        <a href="/"><h2>VPN/SNAT GateWay</h2></a>
+        <a href="/"><h2>Flex GateWay</h2></a>
       </div>
     </div>
   </header>
