--- a/website/docs/templates/docs/update.html
+++ b/website/docs/templates/docs/update.html
@@ -21,7 +21,7 @@
             <ol>
               <li>通过ssh 或者VNC 管理终端登录VM，切换到root 账号，或者sudo 权限。</li>
               <li>关闭flexgw，执行命令：/etc/init.d/flexgw stop</li>
-              <li>升级，执行命令：yum update flexgw</li>
+              <li>升级，执行命令：/usr/local/flexgw/scripts/update --yes</li>
               <li>根据提示进行升级。</li>
               <li>升级完成，启动flexgw：/etc/init.d/flexgw start</li>
             </ol>
