--- a/website/vpn/dial/templates/dial/settings.html
+++ b/website/vpn/dial/templates/dial/settings.html
@@ -42,6 +42,24 @@
 
         <div class="row">
           <div class="large-3 columns">
+            {{ form.c2c.label(class="right inline") }}
+          </div>
+          <div class="large-5 columns end">
+            {{ form.c2c }}
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-3 columns">
+            {{ form.duplicate.label(class="right inline") }}
+          </div>
+          <div class="large-5 columns end">
+            {{ form.duplicate }}
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="large-3 columns">
             {{ form.subnet.label(class="right inline") }}
           </div>
           <div class="large-5 columns end">
